added reconnect ui  component

--- a/src/weasel.css
+++ b/src/weasel.css
@@ -109,6 +109,13 @@ form, fieldset, div {
 	border-width: 1px;
 	margin: 0.5rem 0;
 }
+.activebutton {
+	color: var(--color-0);
+	background-color: var(--color-5);
+}
+.activebutton:hover {
+	color: var(--color-3);
+}
 input, button { /* normalize */
 	overflow: visible;
 	text-transform: none;
